mutiple dates/stay lengths

--- a/res_scraper.ipynb
+++ b/res_scraper.ipynb
@@ -16,230 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date: Jul 1\n",
-      "  Hotel 1: $360\n",
-      "  Hotel 2: $281\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: $271\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 2\n",
-      "  Hotel 1: $379.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 3\n",
-      "  Hotel 1: $499.99\n",
-      "  Hotel 2: $597\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 4\n",
-      "  Hotel 1: $500\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 5\n",
-      "  Hotel 1: $499.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: $316\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 6\n",
-      "  Hotel 1: $499.99\n",
-      "  Hotel 2: $599\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 7\n",
-      "  Hotel 1: $379.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 8\n",
-      "  Hotel 1: $379.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 9\n",
-      "  Hotel 1: $379.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 10\n",
-      "  Hotel 1: $479.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 11\n",
-      "  Hotel 1: Unavailable\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 12\n",
-      "  Hotel 1: $509.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 13\n",
-      "  Hotel 1: $499.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 14\n",
-      "  Hotel 1: Unavailable\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 15\n",
-      "  Hotel 1: $479.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 16\n",
-      "  Hotel 1: $489.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 17\n",
-      "  Hotel 1: $439.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 18\n",
-      "  Hotel 1: Unavailable\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 19\n",
-      "  Hotel 1: Unavailable\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 20\n",
-      "  Hotel 1: $469.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 21\n",
-      "  Hotel 1: $499.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 22\n",
-      "  Hotel 1: $499.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 23\n",
-      "  Hotel 1: $490\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 24\n",
-      "  Hotel 1: $469.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 25\n",
-      "  Hotel 1: $509.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 26\n",
-      "  Hotel 1: $469.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: $239\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 27\n",
-      "  Hotel 1: $429.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 28\n",
-      "  Hotel 1: Unavailable\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: $316\n",
-      "  Hotel 4: $236\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 29\n",
-      "  Hotel 1: $459.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 30\n",
-      "  Hotel 1: $459.99\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: Unavailable\n",
-      "  Hotel 6: Unavailable\n",
-      "Date: Jul 31\n",
-      "  Hotel 1: $510\n",
-      "  Hotel 2: Unavailable\n",
-      "  Hotel 3: Unavailable\n",
-      "  Hotel 4: Unavailable\n",
-      "  Hotel 5: $239\n",
-      "  Hotel 6: Unavailable\n"
+      "Availabilities: \n",
+      "  Jul 1\n",
+      "    Price: $271\n",
+      "  Jul 31\n",
+      "    Price: $239\n"
      ]
     }
    ],
@@ -278,27 +66,136 @@
     "\n",
     "\n",
     "dates_prices = []\n",
-    "# date_cells = date_rows.find_all('div', class_='price-cell-wrapper')\n",
+    "\n",
     "for date_cell in date_rows:\n",
     "    date = date_cell.find('div', class_='day-row').find('span', class_='day-title').text.strip()\n",
     "    hotel_prices = []\n",
     "    price_cells = date_cell.find_all('div', class_='price-cell')\n",
-    "    for price_cell in price_cells:\n",
-    "        price_div = price_cell.find('div', class_='price-cell')\n",
-    "        if price_cell.find('span', class_='sold-out'):\n",
+    "\n",
+    "\n",
+    "    # # this will check all hotels\n",
+    "\n",
+    "    # for price_cell in price_cells:\n",
+    "    #     if price_cell.find('span', class_='sold-out'):\n",
+    "    #         price = \"Unavailable\"\n",
+    "    #     else:\n",
+    "    #         price = price_cell.get_text(strip=True)\n",
+    "    #     hotel_prices.append(price)\n",
+    "\n",
+    "    price_cell = price_cells[4]  # this will only check the 5th hotel\n",
+    "\n",
+    "    if price_cell.find('span', class_='sold-out'):\n",
     "            price = \"Unavailable\"\n",
-    "        else:\n",
-    "            price = price_cell.get_text(strip=True)\n",
-    "        hotel_prices.append(price)\n",
-    "        # price = date_cell.find('span', class_='wrap-rates').get_text(strip=True)\n",
-    "        # print(price)\n",
-    "    dates_prices.append((date, hotel_prices))\n",
+    "    else:\n",
+    "        price = price_cell.get_text(strip=True)\n",
+    "    hotel_prices.append(price)\n",
+    "    \n",
+    "    if any(price != \"Unavailable\" for price in hotel_prices): \n",
+    "        dates_prices.append((date, hotel_prices))\n",
     "\n",
-    "\n",
+    "print(\"Availabilities: \")\n",
     "for date, hotels_prices in dates_prices:\n",
-    "    print(f\"Date: {date}\")\n",
-    "    for idx, price in enumerate(hotels_prices):\n",
-    "        print(f\"  Hotel {idx + 1}: {price}\")\n"
+    "    available_prices = [(idx + 1, price) for idx, price in enumerate(hotels_prices) if price != \"Unavailable\"]\n",
+    "    print(f\"  {date}\")\n",
+    "    for hotel, price in available_prices:\n",
+    "        print(f\"    Price: {price}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Swiftcurrent Availabilities:\n",
+      "  1 night(s):\n",
+      "    Date: Aug 4\n",
+      "      Price: $185\n",
+      "  2 night(s):\n",
+      "    None found\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "\n",
+    "def check_availability(url):\n",
+    "    options = Options()\n",
+    "    options.headless = True \n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "\n",
+    "    driver.get(url)\n",
+    "\n",
+    "    wait = WebDriverWait(driver, 18)\n",
+    "    wait.until(EC.presence_of_element_located((By.CLASS_NAME, 'price-calendar-container')))\n",
+    "\n",
+    "    driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "    # time.sleep(3) \n",
+    "\n",
+    "    soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "\n",
+    "    driver.quit()\n",
+    "\n",
+    "    price_calendar = soup.find('div', class_='price-calendar')\n",
+    "\n",
+    "    date_rows = price_calendar.find_all('div', class_='day-row-wrapper')\n",
+    "\n",
+    "    dates_prices = []\n",
+    "\n",
+    "    for date_cell in date_rows:\n",
+    "        date = date_cell.find('div', class_='day-row').find('span', class_='day-title').text.strip()\n",
+    "        price_cells = date_cell.find_all('div', class_='price-cell')\n",
+    "        if len(price_cells) >= 5:\n",
+    "            price_cell = price_cells[4]  # Check only the 5th hotel\n",
+    "            if price_cell.find('span', class_='sold-out'):\n",
+    "                price = \"Unavailable\"\n",
+    "            else:\n",
+    "                price = price_cell.get_text(strip=True)\n",
+    "            \n",
+    "            if price != \"Unavailable\":\n",
+    "                dates_prices.append((date, price))\n",
+    "    \n",
+    "    return dates_prices\n",
+    "\n",
+    "urls = [\n",
+    "    \"https://secure.glaciernationalparklodges.com/booking/lodging-flex-search?destination=ALL&adults=2&children=0&infants=0&animals=0&rateCode=&rateType=&nights=1&dateFrom=07-01-2024\",\n",
+    "    \"https://secure.glaciernationalparklodges.com/booking/lodging-flex-search?destination=ALL&adults=2&children=0&infants=0&animals=0&rateCode=&rateType=&nights=2&dateFrom=07-01-2024\",\n",
+    "    \"https://secure.glaciernationalparklodges.com/booking/lodging-flex-search?destination=ALL&adults=2&children=0&infants=0&animals=0&rateCode=&rateType=&nights=1&dateFrom=08-01-2024\",\n",
+    "    \"https://secure.glaciernationalparklodges.com/booking/lodging-flex-search?destination=ALL&adults=2&children=0&infants=0&animals=0&rateCode=&rateType=&nights=2&dateFrom=08-01-2024\"\n",
+    "]\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "for url in urls:\n",
+    "    nights = url.split(\"nights=\")[1].split(\"&\")[0]\n",
+    "    date_from = url.split(\"dateFrom=\")[1]\n",
+    "\n",
+    "    key = f\"  {nights} night(s) stay\"\n",
+    "    if key not in results:\n",
+    "        results[key] = []\n",
+    "\n",
+    "    results[key].extend(check_availability(url))\n",
+    "\n",
+    "print(\"Swiftcurrent Availabilities:\")\n",
+    "for key in sorted(results.keys()):\n",
+    "    print(f\"{key}:\")\n",
+    "    if len(results[key]) == 0:\n",
+    "        print(\"    None found\")\n",
+    "    else:\n",
+    "        for date, price in results[key]:\n",
+    "            print(f\"    Date: {date}\")\n",
+    "            print(f\"      Price: {price}\")\n"
    ]
   }
  ],
